--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -539,3 +539,11 @@
 #contacto {
   scroll-margin-top: 80px; /* Ajusta según tu barra */
 }
+
+
+.fondo-negro-subway {
+  background-color: #000;
+  padding: 12px;
+  border-radius: 12px;
+  display: inline-block;
+}
